# python

./: (my)crawling.ipynb  .gitignore  Crawling.ipynb  KOSPI_ANALYSIS.ipynb  NASDAQ_ANALYSIS with RSI and BOLLINGER_ BAND.ipynb  README.md  Untitled.ipynb  crawling_mini_project.ipynb  crawling_mini_project_backup.ipynb  currency.csv  data-analysis-for-titanic.ipynb  db pia 딥러닝 논문 크롤링 with slack bot.ipynb  elliottwave_graph_example.ipynb  google_news.csv  kaggle netflix 데이터분석 .ipynb  numpy,pandas 기본 .ipynb  python_crawling_example.ipynb  stock_info.csv  visualization.ipynb  네이버 금융 crawling.ipynb
.ipynb_checkpoints/: SRT 예매 프로그램-checkpoint.ipynb  python_crawling_example-checkpoint.ipynb
EDA/: INVESTMENT_STRATEGY_PERFORMANCE.ipynb  RSI,BOLLINGER_BAND STRATEGY_PERFORMANCE.ipynb  data-analysis-for-titanic.ipynb
ML/: LGBM code 실습.ipynb
crawling/: googelmaps api활용 .ipynb
numpy,pandas/: numpy,pandas 기본 .ipynb
패캠 강의/.ipynb_checkpoints/: 데이터 처리 라이브러리(Pandas)-checkpoint.ipynb
패캠 강의/pluto-flask-backend/: database.db  pyproject.toml
패캠 강의/pluto-flask-backend/src/: app.py  app2.py  dust_api.py
패캠 강의/pluto-flask-backend/src/templates/: index.html
패캠 강의/업무효율 향상을 위한 폴더 관리 프로그램 /: 02. 디렉터리 다루기 - os.path, pathlib.ipynb  06. 프로젝트 실습.py
패캠 강의/업무효율 향상을 위한 폴더 관리 프로그램 /.ipynb_checkpoints/: 02. 디렉터리 다루기 - os.path, pathlib-checkpoint.ipynb  06. 프로젝트 실습-checkpoint.ipynb
패캠 강의/업무효율 향상을 위한 폴더 관리 프로그램 /sample/: 새파일1.txt  새파일2.txt  새파일3.txt
